Step2 수동로또 미션 제출합니다. (#3297)
* refactor : 매직넘버 제거 및 로또 결과 출력 조건 수정

* refactor : 불필요한 상수 제거

* feat : ProfixRate 객체 추가

* test : LottoPurchase 검증 테스트 코드 추가

* feat : LottoPurchase 검증 기능 추가

* feat : 수동 로또 정보 입력받는 기능 추가

* feat : LottoController 수동 로또 기능 추가

* test : LOTTO_PRICE 상수화

* refactor : final 예약어 사용

* docs : README LottoPurchase 추가

* test : LottoCount 검증 테스트

* refactor : LottoCount 검증 추가

* refactor : Payment 메서드명 변경

* refactor : Lotto 에러 메시지 수정

* refactor : 디렉토리 변경 및 객체명 변경

* refactor : 불필요한 Import 제거